--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<java.version>21</java.version>
 		<surefire.version>3.2.2</surefire.version>
 		<jacoco.version>0.8.12</jacoco.version>
+		<spring.webflux.version>3.2.5</spring.webflux.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,11 +38,16 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+			<version>${spring.webflux.version}</version>
+		</dependency>
+
+		<!-- Dependencies for test-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- Test Dependencies -->
 
 	</dependencies>
 
