--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.itau</groupId>
-	<artifactId>geradornotafiscal</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>gerador-de-nf</artifactId>
+	<version>0.0.5-SNAPSHOT</version>
 	<name>calculadoratributos</name>
 	<description>Aplicacao para calculo de tributos</description>
 	<properties>
